---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: ????
  Changes:
    - clean_cursor renamed to clear_cursor.
    - on_put_item renamed to on_pre_build.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2020-05-24
  Changes:
    - Remove use of script.raise_event.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2020-04-30
  Bugfixes:
    - Remove deprecated custom input type.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ??????
  Features:
    - Update to Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: ??????
  Features:
    - Repeatadly calling belt-brush corners on an underground belt or pipe BP will shrink the distance.
  Bugfixes:
    - Fix balancers not working because 0 is not false!
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ??????
  Changes:
    - Better Adjustment Pad.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ??????
  Changes:
    - Auto circuit wires by bots option off by default.
  Bugfixes:
    - Fix max_belts always being 5.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: ??????
  Bugfixes:
    - Fix highlighter not unregistering.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: ??????
  Bugfixes:
    - Fix Underground Path Highlighter error.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ??????
  Features: