@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - clean_cursor renamed to clear_cursor.
     - on_put_item renamed to on_pre_build.
+    - use tonumber for text fields.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.2
 Date: 2020-05-24
